# project-sid

./: .dockerignore  .env.example  .gitignore  AI倫理分析レポート.md  CLAUDE.md  README.md  pyproject.toml  社会シミュレーション分析レポート.md  論文詳細分析レポート.md
.analysis/: 01_piano_architecture.md  02_single_agent.md  03_multi_agent.md  04_civilization.md  05_methods_discussion.md
.github/workflows/: ci.yml  e2e.yml  phase1.yml  phase2.yml
benchmarks/: networkx_scalability.py
bridge/: package-lock.json  package.json
bridge/src/: index.ts  launcher.ts  types.ts
bridge/src/handlers/: advanced.ts  basic.ts  combat.ts  perception.ts  (+1 more)
docker/: Dockerfile.agent  Dockerfile.bridge  docker-compose.phase2.yml  docker-compose.sim.yml  docker-compose.yml
docker/certs/: generate-dev-certs.sh
docker/mc-server/: bukkit.yml  server.properties
docker/prometheus/: prometheus.yml
docker/redis/: redis-tls.conf
docs/: 01-background.md  02-piano-architecture.md  03-single-agent.md  04-multi-agent.md  05-civilization.md  06-methods.md  07-discussion.md  08-evaluation.md  e2e-setup.md  index.md  mc-readiness-report.md
docs/implementation/: 00-overview.md  01-system-architecture.md  02-llm-integration.md  03-cognitive-controller.md  04-memory-system.md  05-minecraft-platform.md  06-social-cognition.md  07-goal-planning.md  08-infrastructure.md  09-evaluation.md  10-devops.md  e2e-simulation.md  nn_action_awareness.md  review-comprehensive.md  review-cost.md  review-integration.md  review-oss.md  review-security.md  review-testing.md  roadmap.md
examples/: action_awareness_nn_demo.py
k8s/: agent-worker.yaml  configmap.yaml  kustomization.yaml  llm-gateway.yaml  minecraft-shard.yaml  monitoring.yaml  namespace.yaml  network-policies.yaml  qdrant.yaml  redis-cluster.yaml
src/piano/: __init__.py  __main__.py  main.py
tests/: conftest.py  helpers.py
tests/e2e/: __init__.py  conftest.py  test_single_agent.py
tests/integration/: conftest.py  test_agent_lifecycle.py  test_fault_injection.py  test_networkx_scale.py  test_perception_flow.py  test_phase1_smoke.py  test_phase2_smoke.py  test_simulation_flow.py
tests/unit/: test_main.py  test_tls_settings.py
(+160 files in other folders)
