[project]
name = "piano"
version = "0.1.0"
description = "PIANO Architecture - Parallel Information Aggregation via Neural Orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "litellm>=1.0",
    "pyzmq>=25.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis>=4.6",
    "fakeredis>=2.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piano"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["piano"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["litellm.*", "mineflayer.*", "qdrant_client.*", "networkx.*", "scipy.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fakeredis>=2.34.0",
    "iniconfig>=2.3.0",
    "mypy>=1.19.1",
    "pluggy>=1.6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.2",
    "types-redis>=4.6.0.20241004",
]
